Bug 14293 - Missing check for DMAPI offline status in async DOS attributes
Summary: Missing check for DMAPI offline status in async DOS attributes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-24 14:17 UTC by Ralph Böhme
Modified: 2020-03-19 09:33 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.12.next, 4.11.next. (9.12 KB, patch)
2020-03-06 19:29 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2020-02-24 14:17:42 UTC
If async DOS attributes are enabled with "smbd async dosmode = yes", a SMB2_FIND requests triggers VFS calls to SMB_VFS_GET_DOS_ATTRIBUTES_SEND()/RECV().

The implementation of these VFS functions in vfs_default.c in vfswrap_get_dos_attributes_getxattr_done() is missing a call to vfswrap_is_offline() as being done in the sync versions vfswrap_[f]get_dos_attributes().

Have patch, need bugnumber.
Comment 1 Jeremy Allison 2020-02-25 19:36:43 UTC
Now in master, ready for cherry-pick.
Comment 2 Jeremy Allison 2020-03-06 19:29:25 UTC
Created attachment 15848 [details]
git-am fix for 4.12.next, 4.11.next.

Cherry-picked from master.
Comment 3 Ralph Böhme 2020-03-16 13:14:50 UTC
Reassigning to Karolin for inclusion in 4.11 and 4.12.
Comment 4 Karolin Seeger 2020-03-18 10:23:44 UTC
(In reply to Ralph Böhme from comment #3)
Pushed to autobuild-v4-{12,11}-test.
Comment 5 Karolin Seeger 2020-03-19 09:33:03 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!